src/scss/map.scss
@import 'variables';

figure#assets-map {
	& * {
		font-family: 'Manrope', sans-serif;
		font-size: 0.8rem;
	}

	height: 80vh;
	margin: 0;

	.assets-map {
		width: 100%;
		height: 100%;
		overflow: scroll;

		.marker {
			height: 3em;
			width: 3em;
			display: flex;
			justify-content: center;
			align-items: center;
			border-radius: 100%;
			background-color: rgba($orange, 0.8);
			cursor: pointer;

			&.cluster-marker p {
				font-size: 16px;
				font-weight: 500;
			}

			img {
				height: 80%;
				max-width: 80%;
			}
		}
	}
}

